k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mle-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: mle-api
