k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mle-ingress
spec:
  defaultBackend:
    service:
      name: mle-service
      port:
        number: 8000
